# rmeo

./: README.md  README.md~
rmeo/arduino proyectoprueba/INO/SensorUltrasonico1/: SensorUltrasonico1.ino
rmeo/mybot_ws-master/: test_map.pgm
rmeo/mybot_ws-master/devel/: .catkin  .rosinstall  setup.sh
rmeo/mybot_ws-master/devel/lib/mybot_codigo/: odom  puntoAB
rmeo/mybot_ws-master/devel/lib/pkgconfig/: ensamblaje_ft.pc  mybot_codigo.pc  mybot_control.pc  mybot_description.pc  mybot_gazebo.pc  mybot_navigation.pc
rmeo/mybot_ws-master/devel/share/ensamblaje_ft/cmake/: ensamblaje_ftConfig.cmake
rmeo/mybot_ws-master/devel/share/mybot_codigo/cmake/: mybot_codigoConfig.cmake
rmeo/mybot_ws-master/devel/share/mybot_control/cmake/: mybot_controlConfig.cmake
rmeo/mybot_ws-master/devel/share/mybot_gazebo/cmake/: mybot_gazeboConfig.cmake
rmeo/mybot_ws-master/src/ensamblaje_ft/: CMakeLists.txt  package.xml
rmeo/mybot_ws-master/src/ensamblaje_ft/launch/: display.launch  gazebo.launch  mapping_rviz.launch  mapping_rviz_amcl.launch  mapping_rviz_gmapping.launch
rmeo/mybot_ws-master/src/ensamblaje_ft/meshes/: RD_Link.STL  RI_Link.STL  RL_Link.STL  carrito_base_link.STL
rmeo/mybot_ws-master/src/ensamblaje_ft/rviz/: mapping.rviz  test.rviz
rmeo/mybot_ws-master/src/ensamblaje_ft/urdf/: ensamblaje_ft.gv  ensamblaje_ft.urdf  robot1_base_04.xacro~
rmeo/mybot_ws-master/src/mybot_codigo/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
rmeo/mybot_ws-master/src/mybot_codigo/src/: puntoAB.cpp
rmeo/mybot_ws-master/src/mybot_navigation/maps/: test_map.yaml
(+2 files in other folders)
